# elphbolt

./: .gitignore  CHANGELOG.org  CITATION.cff  CMakeLists.txt  CONTRIBUTORS.md  Dockerfile  README.md  README.org  fpm.toml  fpm_config_caf.sh  fpm_config_caf_openacc.sh  install_blas+lapack.sh  opencoarrays.scm  projectfile.md
.github/workflows/: build_test.yml  build_test_cmake.yml  build_test_fpm.yml
EPW/src/: README.org  README.txt  rigid_epw.f90
Makefiles/: Makefile  lp_gfortran.make  msi_intel.make  thinkpad_gcc.make
app/: elphbolt.f90  superconda.f90
documentation/: index.html  search.html
documentation/interface/: calculate_dos.html  sort.html  spg_get_international.html  spg_get_multiplicity.html  spg_get_symmetry.html
documentation/js/: jquery-2.1.3.min.js
documentation/lists/: files.html  modules.html  procedures.html  types.html
documentation/module/: bte_module.html  bz_sums.html  crystal_module.html  delta.html  electron_module.html  interactions.html  misc.html  numerics_module.html  params.html  particle_module.html  phonon_module.html  spglib_wrapper.html  symmetry_module.html  wannier_module.html
documentation/proc/: append2file_transport_tensor.html  binsearch.html  bose.html  calculate_3ph_interaction.html  calculate_bound_scatt_rates.html  calculate_echimp_interaction_ibzk.html  calculate_el_rta_rates.html  calculate_eph_interaction_ibzk.html  calculate_eph_interaction_ibzq.html  calculate_gkrp.html  calculate_greq.html  calculate_ph_rta_rates.html  calculate_qtf.html  calculate_spectral_transport_coeff.html  calculate_transport_coeff.html  calculate_wavevectors_full.html  create_fbz2ibz_map.html  cross_product.html  delta_fn_tetra.html  delta_fn_triang.html  demux_mesh.html  demux_state.html  demux_vector.html  distribute_points.html  end_timer.html  exit_with_message.html  expi.html  fbz2ibz.html  fermi.html  fill_tetrahedra_3d.html  fill_triangles.html  find_equiv_map.html  find_irred_wedge.html  form_tetrahedra_3d.html  form_triangles.html  get_cartesian_operations.html  get_num_operations.html  get_operations.html  int_div.html  interpolate.html  (+17 more)
documentation/program/: elphbolt.html
documentation/sourcefile/: bte.f90.html  bz_sums.f90.html  crystal.f90.html  delta.f90.html  electron.f90.html  elphbolt.f90.html  interactions.f90.html  misc.f90.html  numerics.f90.html  params.f90.html  particle.f90.html  phonon.f90.html  spglib_wrapper.f90.html  symmetry.f90.html  wannier.f90.html
documentation/src/: bte.f90  bz_sums.f90  crystal.f90  delta.f90  electron.f90  elphbolt.f90  interactions.f90  misc.f90  numerics.f90  params.f90  phonon.f90  spglib_wrapper.f90  symmetry.f90  wannier.f90
documentation/tipuesearch/: tipuesearch_content.js
documentation/type/: bte.html  crystal.html  electron.html  epw_wannier.html  numerics.html  particle.html  phonon.html  symmetry.html  timer.html
examples/Si/: README.org  example_run_script.sh  output_gcc.txt
examples/Si/input/: input.nml
examples/Si/qe_and_epw_inputs/anharmonic/: 3scf_submitjob.sh
examples/Si/qe_and_epw_inputs/anharmonic/anharm_sc555_6nn/: si.in
examples/Si/qe_and_epw_inputs/epw/: nscf.in  scf.in
examples/Si/qe_and_epw_inputs/phonons/: README.org  ph.in
postproc/: README.org  dos.jl  parameters.jl  spectral_trans_coeffs.jl  statistics.jl
src/: .gitignore  CMakeLists.txt  Makefile  autodiff.f90  bte.f90  bte_nano.f90  bz_sums.f90  config.f90  crystal.f90  data.f90  delta.f90  derived_types.f90  electron.f90  electrons.f90  eliashberg.f90  elphbolt.f90  example.make  green.f90  interactions.f90  isotopes.f90  m_isotopes.f90  mesh.f90  migel_sc.f90  misc.f90  mn_arch.make  mn_gfortran.make  mn_intel.make  nano.f90  numerics.f90  params.f90  particle.f90  phonon.f90  phonon_defect.f90  phonons.f90  precision.f90  projectfile.md  resource.f90  screening.f90  screening_comparison.f90  sepe.f90  (+8 more)
test/: bte_regression.f90  check_interactions_symmetries.f90  input.nml  run.sh  screening_comparison.f90  test_autodiff.f90  test_misc.f90  test_periodictable.f90  test_vector.f90  test_vector_allreps.f90
test/3C-SiC/: fpm_run_bte_caf.sh  fpm_run_symcheck_caf.sh  input.nml  run_bte_caf.sh  run_bte_ifort.sh
test/Si/: README.org  example_run_script.sh  getinputdata.txt  output_gcc.txt
test/Si/input/: README.org
test/Si/qe_and_epw_inputs/anharmonic/: 3phonopost.sh  3phonopre.sh  README.org
test/Si/qe_and_epw_inputs/anharmonic/anharm_sc555_6nn/: si_sc.in
test/Si/qe_and_epw_inputs/epw/: README.org  epw.in
test/Si/qe_and_epw_inputs/phonons/: q2r.in  scf.in
tests/: test_misc.f90
